# crowdfunding-with-erc20

./: README.md  justfile  pyproject.toml
.hypothesis/constants/: 0a4dafa66c988e68  a330b3576d96b223  bbc2196cd4e70ca7  d0a7bd8b5b0b4ff6  da39a3ee5e6b4b0d
.hypothesis/examples/012118ad0b767ab9/: 05a83d7e68de031a  7f1b9af66cf8e180
.hypothesis/examples/04e6b3400353b141/: 012118ad0b767ab9  06b6bcf732507ec1  07c1acfeddab06b0  0ab3e14545396ba2  13e611b5faa6691a  141bcd077b060e31  154d335075076290  166b636532dcbd1b  198c34ac0350edd8  1af20655bd148b15  1d1c6a361f3eb818  1d2ae686c10ee1cc  1d6521ef6f8c3709  1f7658613b14ecce  20e9af104d1a9ebe  263d5fcfbe11f7b1  29737d4c4dfcc9ee  2ae7484e74096529  2cea09b067dffefb  30c8fe30c2fb2077  31bc2af38e6cfb92  368e5f69e23c1625  36ef50eb7efec5dc  3b0e62d0ee7e3c0f  3d6bec6a9f0e5383  44d7d8a89310db4c  4666a5560627054e  4921f56e4561214b  4ad027e4fb88bd7a  4db8a2fe4ae9d74c  4f4fee2e59c95bca  52abe6fbd353bb33  53ac1b08621a2088  576f423a01cf4f88  57e4e51b790ed929  5aa736c4a447d0c3  5b8d03a93e536eb8  5d653b7c82cf6487  67cd6a0e5de45b9a  69256be2b505dda6  (+65 more)
.hypothesis/examples/06b6bcf732507ec1/: 01fe4be2fc1f11a5  1694ca36d2993920  1e6ecbfabbebc8ed  24e1af98e679e767  4451d5d3280e9253  4b216a31c80a56b1  5253f44057ea5132  55bcd9061aaa1b11  688607168e566c98  6b995299ac1ad732  72ae8fbae325b352  93b2303a77e935a3  ac61f49e87b60898  b496dff0739e4c68  c2577b5bf3cd53db  (+5 more)
contracts/: crowdfunding.vy  fund_token.vy
contracts/interfaces/: FundTokenInterface.vyi
script/: deploy.py  deploy_erc20.py
tests/: conftest.py  test_fuzz.py  test_unit.py
(+659 files in other folders)
